--- a/auth/pyvenv.cfg
+++ b/auth/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /usr/local/opt/python@3.9/bin
+home = /Users/guidomatijas/flask_auth_app/auth/bin
 include-system-site-packages = false
 version = 3.9.9
